--- a/CSS/styles.CSS
+++ b/CSS/styles.CSS
@@ -76,6 +76,26 @@ header {
  color: #fff;
 }
 
+.button-edit, .button-delete {
+    padding: 5px 10px;
+    border-radius: 6px;
+    transition: transform .2s ease;
+    background-color: #4e0070;
+    color: #ffffff;
+    font-size: 16px;
+    border-color: transparent;
+}
+
+.button-edit:hover {
+    color: #4c79d3;
+    background-color: #ffffff;
+    border-color: #4c79d3;
+}
+
+.button-delete:hover {
+    background-color: #d9534f;
+}
+
 .button-cancel:hover {
     background-color: #4F4F4F;
 }
@@ -113,4 +133,11 @@ header {
 
 .menu {
    margin-right: 20px;
+}
+
+@media screen and (max-width : 560px) {
+    .button-edit, .button-delete {
+        font-size: 14px;
+        margin: 5px;
+    }
 }
